--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -12,7 +12,7 @@
         android:layout_height="520dp"
         android:ems="10"
         android:gravity="top"
-        android:inputType="textPersonName"
+        android:inputType="textMultiLine"
         android:textColor="@color/colorPrimary"
         android:textSize="24dp"
         android:textStyle="italic"
